Alignment fixed

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,9 +1,20 @@
 page-home {
     .n{ color: #18A0A0;}
-    .toolbar-title.toolbar-title-md{ padding-left:55px; text-align: center; color: #18A0A0; font-size: 25px;}
-    .hammer{ padding-right: 13px;}
-    .Menu{ padding-left: 13px;}
-    .Union{ padding-right: 13px;}
+    .toolbar-title.toolbar-title-md{ 
+        padding-left:55px; 
+        text-align: center; 
+        color: #18A0A0; 
+        font-size: 25px;
+    }
+    .hammer{ 
+        padding-right: 13px;
+    }
+    .Menu{ 
+        padding-left: 13px;
+    }
+    .Union{ 
+        padding-right: 13px;
+    }
    ion-icon{
        color: #18A0A0;
    }
