--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -1,78 +1,66 @@
 page-signup {
-    .toolbar-title.toolbar-title-md{ padding-left:30x; text-align: center; color: white; font-size-top: 20.5px;}
+    .toolbar-title{ 
+        color: white;
+        font-size: 25px;
+        text-align: center;
+   }
     .toolbar-background {background-color: #18A0A0; }
    ion-icon{
        color: #18A0A0;
    }
 ion-avatar{
-    height: 110px ;
-    width: 110px;
+    height: 140px;
+    width: 140px;
     border-radius: 50%;
     overflow: hidden;
-    align-items: center;
-    margin-top: 50px;
-    margin-left: 110px;
-    margin-bottom: 20px;
-   align-content: center;
-
-    
+    margin: auto;
+    margin-top: 25%;
 }
 .l1{
+    position: relative;
     border-radius: 30px !important;
-     padding-left: 30px !important;
-     font-size: 0.9em;
-     margin-top: 10px;
-     margin-bottom: 10px;
-     border: 1px solid black;
-     box-shadow: none !important;
-     margin-left: 20px;
-    width: 290px;
-    height: 0.5px;
+    font-size: 0.9em;
+    border: 1px solid grey;
+    width: 90%;
+    margin: auto;
+    margin-top: 8%;
 }
 .l2{
-    height: 0.5px;
-    border-radius: 30px !important;
-     padding-left: 30px !important;
-     font-size: 0.9em;
-     margin-top: 10px;
-     margin-bottom: 10px;
-     border: 1px solid black;
-     box-shadow: none !important;
-     margin-left: 20px;
-    width: 290px;
+    position: relative;
+        border-radius: 30px !important;
+        font-size: 0.9em;
+        border: 1px solid grey;
+        width: 90%;
+        margin: auto;
+        margin-top: 8%;
 }
 .l3{
-    height: 0.5px;
-    margin-left: 20px;
-    width: 290px;
+    position: relative;
     border-radius: 30px !important;
-     padding-left: 30px !important;
-     font-size: 0.9em;
-     margin-top: 10px;
-     margin-bottom: 10px;
-     border: 1px solid black;
-     box-shadow: none !important;
+    font-size: 0.9em;
+    border: 1px solid grey;
+    width: 90%;
+    margin: auto;
+    margin-top: 8%;
 }
 .l4{
     position: relative;
-    height: 10px;
-    margin-left: 20px;
-    width: 290px;
     border-radius: 30px !important;
-     padding-left: 30px !important;
-     font-size: 0.9em;
-     margin-top: 10px;
-     margin-bottom: 10px;
-     border: 1px solid black;
-      
-     box-shadow: none !important;
+    font-size: 0.9em;
+    border: 1px solid grey;
+    width: 90%;
+    margin: auto;
+    margin-top: 8%;
     
 }
-ion-buttons{
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top:40px;
-    margin-bottom: 40px;
-    color: #18A0A0;
+.button{
+    background: #18A0A0;
+    width: 90%;
+    margin: auto;
+    margin-top: 20%;
+}
+
+.navLogin{
+    margin-top: 15%;
 }
 }
